# SDL2

./: .gitignore  README.md
.cache/clangd/index/: main.c.1997824DAF1EFC14.idx
.zed/: settings.json
src/: CMakeLists.txt  bld.sh  cmk.sh  main.c  run.sh
